--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -60,7 +60,7 @@
 			</thead>
 			<tbody>
 
-				{volist name="zuhe" id="vo"}
+				{volist name="list" id="vo"}
 					<tr class="text-c">
 						<td><input type="checkbox" value="{$vo.id}" name="admin_id"></td>
 						<td>{$vo.id}</td>
@@ -93,7 +93,6 @@
 							<!-- <a style="text-decoration:none" onClick="admin_stop(this,{$vo['id']})" href="javascript:;" title="停用">
 								<i class="Hui-iconfont">&#xe631;</i>
 							</a> -->
-
 
 							<a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','{:url('Admin/edit',array('id'=>$vo['id']))}','1','800','500')" class="ml-5"
 								style="text-decoration:none">
