后台设置上传图片

--- a/application/admin/view/goods/add_goods.html
+++ b/application/admin/view/goods/add_goods.html
@@ -217,7 +217,7 @@
 </div>
 <form id="hide-form" style="display:none;" target="ajaxR" enctype="multipart/form-data" method="POST" action="/admin/system/upload_images">
     <input id="hide-form-file" type="file" name="image" value="" >
-    <input id="hide-form-file" type="text" name="module" value="goods" >
+    <input id="" type="text" name="module" value="goods" >
 </form>
 <iframe name="ajaxR" style="display:none;"></iframe>
 <iframe name="ajaxR-from" style="display:none;"></iframe>
