--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -114,7 +114,7 @@
 				<div class="nscramble-wrap">
 					<div class="title">
 						<h3>微解读</h3>
-						<a href="#"><span class="more">查看全部50项</span></a>
+						<a href="#"><span class="more">查看全部{$article_count}项</span></a>
 					</div>
 					<div class="nscramble-list">
 						<li class="nscrambleItem">
@@ -142,6 +142,17 @@
 				<div class="question-wrap">
 					<h2>搜索我DNA里的健康风险</h2>
 					<ul class="question-list">
+						{volist name="article" id="vo"}
+							<li>
+								<div class="text">
+									<h3><a href="#">基因检测有什么意义?</a></h3>
+									<p>我们可以从基因检测的遗传密码中探究最真实的自己，比如：“为什么我喝酒会脸红？我有什么天赋？我是节食减肥快，还是跑步减肥快？我体内潜藏了哪些易感致病基因？......</p>
+								</div>
+								<div class="img-wrap">
+									<img src="__STATIC__/img/home/tupian5@2x.png" />
+								</div>
+							</li>
+						{/volist}
 						<li>
 							<div class="text">
 								<h3><a href="#">基因检测有什么意义?</a></h3>
