--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -67,7 +67,7 @@
 						<td>{$vo.name}</td>
 						<!-- <td>13000000000</td>
 						<td>admin@mail.com</td> -->
-						<td>{$vo.g_name}</td>
+						<td>{if condition="isset($cname[$vo.group_id])"}{$cname[$vo.group_id]}{else /}-{/if}</td>
 						<td>{:date('Y-m-d,H:s:i',$vo.addtime)}</td>
 						
 						<td class="td-status">
