--- a/application/admin/view/admin/edit.html
+++ b/application/admin/view/admin/edit.html
@@ -10,7 +10,7 @@
             <div class="row cl">
                 <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>管理员：</label>
                 <div class="formControls col-xs-8 col-sm-9">
-                    <input type="text" class="input-text" value="{$info['name']}" placeholder="" id="adminName" name="name">
+                    <input type="text" readonly class="input-text" value="{$info['name']}" placeholder="" id="adminName" name="name">
                 </div>
             </div>
             <div class="row cl">
@@ -28,15 +28,21 @@
                 </div>
             </div>
             <div class="row cl">
+                {if condition="$info.is_super == 0"}
                 <label class="form-label col-xs-4 col-sm-3">角色：</label>
                 <div class="formControls col-xs-8 col-sm-9"> <span class="select-box" style="width:150px;">
                         <select class="select" name="group_id" size="1">
+                            <option value="">请选择角色</option>
                             {volist name="role" id="vo"}
                             <option value="{$vo.id}" {if condition="($info['group_id']) eq ($vo['id']) "}selected{/if}>{$vo.name}</option>
                             {/volist}
 
                         </select>
-                    </span> </div>
+                    </span>
+                </div>
+                {else/}
+                <input type="hidden" name="group_id" value="0">
+                {/if}
             </div>
 
             <div class="row cl">
@@ -64,33 +70,51 @@
             });
 
             $("#form-admin-add").validate({
-                rules: {
-                    name: {
-                        required: true,
-                        minlength: 4,
-                        maxlength: 16
-                    },
-                    password: {
-                        required: true,
-                        minlength: 4,
-                        maxlength: 16                        
-                    },
-                    password2: {
-                        required: true,
-                        equalTo: "#password",
-                        minlength: 4,
-                        maxlength: 16                        
-                    },
+                // rules: {
+                //     name: {
+                //         required: true,
+                //         minlength: 4,
+                //         maxlength: 16
+                //     },
+                //     password: {
+                //         required: true,
+                //         minlength: 4,
+                //         maxlength: 16                        
+                //     },
+                //     password2: {
+                //         required: true,
+                //         equalTo: "#password",
+                //         minlength: 4,
+                //         maxlength: 16                        
+                //     },
 
-                    group_id: {
-                        required: true,
-                    },
-                },
-                onkeyup: false,
-                focusCleanup: true,
+                //     // group_id: {
+                //     //     required: true,
+                //     // },
+                // },
+
+
+
+
+                // onkeyup: false,
+                // focusCleanup: true,
                 success: "valid",
                 submitHandler: function (form) {
-
+                    var username = $("#adminName").val()
+                    var password = $("#password").val()
+                    var password2 = $("#password2").val()
+                    if (!username) {
+                        layer.msg('用户名必须填写', { icon: 2, time: 1000 });
+                        return false;
+                    }
+                    if (!password) {
+                        layer.msg('密码必须填写', { icon: 2, time: 1000 });
+                        return false;
+                    }
+                    if (!password2) {
+                        layer.msg('确认密码必须填写',{ icon: 2, time: 1000 });
+                        return false;
+                    }     
                     $.ajax({
                         type: 'post',
                         url: "{:url('admin/admin/adminHandle')}",
